setup.RHOAI-v2.19/mlbatch-subscription.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: redhat-ods-operator
---
apiVersion: v1
kind: Namespace
metadata:
  name: redhat-ods-applications
